# prints

./: Cargo.toml  LICENSE-MIT.md  README.md  corgi.blend
.github/workflows/: .ci.yml
assets/blueprints/: corgi.bp.ron  test.bp.ron
assets/models/: corgi.glb
assets_src/: corgi.blend
examples/: simple_bevy.rs
src/: lib.rs  runtime.rs
src/bevy_prints/: mod.rs  spawn.rs
src/expr/: mod.rs  parse.rs
src/value/: deser.rs  mod.rs
