[package]
name = "prints"
version = "0.1.0"
authors = ["Andrew McHarg <amcharg@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Template entity blueprints for bevy"
repository = "https://github.com/robo-corg/prints"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy = {version = "0.8", default-features = false, features = ["bevy_asset"] }
thiserror = "1"
anyhow = "1"
ron = "0.6.4"
tracing = "0.1.26"

[dev-dependencies]
bevy = {version = "0.8" }